<resources>
    <string name="app_name">Location</string>
    <string name="from">Откуда:</string>
    <string name="street">Улица</string>
    <string name="house">Дом</string>
    <string name="flat">Квартира</string>
    <string name="to">Куда:</string>
    <string name="ok">ОК</string>
    <string name="FindLocation">Определить</string>
    <string name="setLocation">Установить</string>
    <string name="title_activity_maps">Map</string>
    <string name="goHere">Ехать сюда</string>
</resources>
